feat!: 添加实例旋转设置,并更新版本号